--- a/styles/main.css
+++ b/styles/main.css
@@ -1,19 +1,34 @@
 /* General Styling */
 
+
 /* Skills Styles */
 #skillRollers {
     display: flex;
     flex-wrap:wrap;
-  }
+}
   
-  #skillRollers section {
+#skillRollers section {
     margin: 0px 10px 10px 10px;
     padding: 0px 10px 5px 10px;
     border: double #bd6800d9 4px;
     border-radius: 10px;
-  }
+}
+
+/* Ability Table */
+.mini-text {
+    display:block;
+    font-size:smaller;
+    font-style: italic;
+}
+
+table, td, th {
+    min-width: 80%;
+    border: 1px solid black;
+    margin: 0;
+    padding: 5px;
+}
   
-  /* Footer Styles */
-  footer p {
+/* Footer Styles */
+footer p {
     text-align: center;
-  }
+}
