--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,11 @@
 /* General Styling */
+label {
+    font-weight:bold;
+}
 
+li {
+    margin: 5px;
+}
 
 /* Skills Styles */
 #skillRollers {
@@ -23,7 +29,7 @@
 
 table, td, th {
     min-width: 80%;
-    border: 1px solid black;
+    border: 1px solid #bd6800d9;
     margin: 0;
     padding: 5px;
 }
