--- a/styles/light.css
+++ b/styles/light.css
@@ -4,13 +4,43 @@ body {
 }
   
 #skillRollers section {
-    border: double #bd6800d9 4px;
+    border: double #563001d9 4px;
+}
+
+/* Tabpanel Formatting */
+[role="tabpanel"] {
+    border: 2px solid hsl(219deg 1% 72%);
+    background: hsl(220deg 43% 99%);
+}
+
+[role="tab"]:hover span.focus,
+[role="tab"]:focus span.focus,
+[role="tab"]:active span.focus {
+  border: 2px solid rgb(36 116 214);
+}
+
+[role="tab"][aria-selected="false"] {
+    border-bottom: 1px solid hsl(219deg 1% 72%);
+}
+
+[role="tab"][aria-selected="true"] {
+    border-top-color: rgb(36 116 214);
+    border-bottom-color: hsl(220deg 43% 99%);
+    background: hsl(220deg 43% 99%);
+}
+
+[role="tab"],
+[role="tab"]:focus,
+[role="tab"]:hover {
+  border: 1px solid hsl(219deg 1% 72%);
+  border-bottom: 2px solid hsl(219deg 1% 72%);
+  background: hsl(220deg 20% 94%);
 }
 
 /* Ability Table */
 
 table, td, th {
-    border: 1px solid #bd6800d9;
+    border: 1px solid #563001d9;
 }
   
 /* Footer Styles */
