--- a/styles/light.css
+++ b/styles/light.css
@@ -2,10 +2,6 @@
 body {
     color: #563001d9;
 }
-  
-#skillRollers section {
-    border: double #563001d9 4px;
-}
 
 /* Tabpanel Formatting */
 [role="tabpanel"] {
@@ -35,6 +31,16 @@ body {
   border: 1px solid hsl(219deg 1% 72%);
   border-bottom: 2px solid hsl(219deg 1% 72%);
   background: hsl(220deg 20% 94%);
+}
+
+/* Skills */
+#skillRollers section {
+    border: double #563001d9 4px;
+}
+
+[type="button"] {
+    background: #563001d9;
+    color: white;
 }
 
 /* Ability Table */
