--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,10 @@
 /* General Styling */
 
+html {
+    width: 800px;
+    height: 600px;
+}
+
 label {
     font-weight:bold;
 }
@@ -16,12 +21,19 @@ p {
 #skillRollers {
     display: flex;
     flex-wrap:wrap;
+    align-content: start;
+    justify-content: left;
 }
   
 #skillRollers section {
     margin: 0px 10px 10px 10px;
     padding: 0px 10px 5px 10px;
     border-radius: 10px;
+    width: 25%;
+}
+
+.rollStat {
+    margin: 10px;
 }
 
 /* Ability Table */
