--- a/web interface/styles/light.css
+++ b/web interface/styles/light.css
@@ -3,6 +3,10 @@ body {
     color: #563001;
 }
 
+code {
+    border: 4px solid #563001;
+}
+
 /* Tabpanel Formatting */
 [role="tabpanel"] {
     border: 2px solid #b7b7b8;
@@ -23,6 +27,7 @@ body {
     border-top-color: #2474d6;
     border-bottom-color: #fbfcfe;
     background: #fbfcfe;
+    color: #563001;
 }
 
 [role="tab"],
@@ -31,6 +36,7 @@ body {
   border: 1px solid #b7b7b8;
   border-bottom: 2px solid #b7b7b8;
   background: #edeff3;
+  color: #563001;
 }
 
 /* Skills */
