--- a/web interface/styles/main.css
+++ b/web interface/styles/main.css
@@ -1,8 +1,14 @@
 /* General Styling */
 
-html {
-    width: 800px;
-    height: 600px;
+/* Used when this is a browser extension.
+    html {
+        width: 800px;
+        height: 600px;
+    }
+*/
+
+main {
+    width: 97%;
 }
 
 label {
@@ -15,6 +21,18 @@ li {
 
 p {
     margin-bottom: 5px;
+}
+
+label {
+    margin: 5px;
+}
+
+code {
+    display: block;
+    min-height: 20px;
+    min-width: 50px;
+    padding: 20px 20px 20px 20px;
+    margin: 20px 20px 20px 2px;
 }
 
 /* Skills Styles */
@@ -30,6 +48,7 @@ p {
     padding: 0px 10px 5px 10px;
     border-radius: 10px;
     width: 25%;
+    /* width: 80%; */ /* This is the width when it is a browser extension. */
 }
 
 .rollStat {
@@ -51,4 +70,5 @@ table, td, th {
 /* Footer Styles */
 footer p {
     text-align: center;
+    padding-bottom: 10px;
 }
