--- a/web interface/styles/main.css
+++ b/web interface/styles/main.css
@@ -17,11 +17,16 @@ label {
 
 li {
     margin: 5px;
+    padding: 5px;
 }
 
 p {
     margin-bottom: 5px;
     display: block;
+}
+
+p span {
+    padding: 5px;
 }
 
 label {
@@ -34,6 +39,20 @@ code {
     min-width: 50px;
     padding: 20px 20px 20px 20px;
     margin: 10px 10px 10px 2px;
+}
+
+input[type="button"] {
+    min-width: 10px;
+    min-height: 10px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.rollDiv {
+    margin-left: 0;
+    padding-left: 0;
 }
 
 /* Skills Styles */
