--- a/web interface/styles/main.css
+++ b/web interface/styles/main.css
@@ -47,7 +47,11 @@ input[type="button"] {
     margin-bottom: 10px;
     margin-top: 10px;
     margin-left: 0;
-    padding-left: 0;
+    padding: 5px;
+}
+
+select, input[type="text"] {
+    padding: 5px;
 }
 
 .rollDiv {
