--- a/web interface/styles/main.css
+++ b/web interface/styles/main.css
@@ -59,6 +59,11 @@ select, input[type="text"] {
     padding-left: 0;
 }
 
+main {
+    padding: 10px;
+    margin: 10px;
+}
+
 /* Skills Styles */
 #skillRollers {
     display: flex;
