--- a/web interface/styles/light.css
+++ b/web interface/styles/light.css
@@ -7,6 +7,15 @@ code {
     border: 4px solid #563001;
 }
 
+input:hover, input:focus {
+    border: 3px solid black;
+    font-weight: bold;
+}
+
+p span {
+    border-bottom: 1px solid black;
+}
+
 /* Tabpanel Formatting */
 [role="tabpanel"] {
     border: 2px solid #b7b7b8;
