--- a/browser-extension/chrome/styles/main.css
+++ b/browser-extension/chrome/styles/main.css
@@ -1,11 +1,9 @@
 /* General Styling */
 
-/* Used when this is a browser extension.
-    html {
-        width: 800px;
-        height: 600px;
-    }
-*/
+html {
+    width: 800px;
+    height: 600px;
+}
 
 main {
     width: 97%;
@@ -77,7 +75,7 @@ main {
     padding: 0px 10px 5px 10px;
     border-radius: 10px;
     width: 25%;
-    /* width: 80%; */ /* This is the width when it is a browser extension. */
+    width: 80%;
 }
 
 .rollStat {
