--- a/browser-extension/chrome/styles/main.css
+++ b/browser-extension/chrome/styles/main.css
@@ -1,4 +1,6 @@
-/* General Styling */
+/***************
+General Styling
+***************/
 
 html {
     width: 800px;
@@ -6,18 +8,18 @@ html {
 }
 
 main {
-    width: 97%;
+    padding: 10px;
+    margin: 10px;
+    width: 95%;
 }
 
-label {
-    font-weight:bold;
-}
-
+/* Lists */
 li {
     margin: 5px;
     padding: 5px;
 }
 
+/* Text */
 p {
     margin-bottom: 5px;
     display: block;
@@ -27,16 +29,27 @@ p span {
     padding: 5px;
 }
 
-label {
-    margin: 5px;
-}
-
 code {
     display: block;
     min-height: 10px;
     min-width: 50px;
     padding: 20px 20px 20px 20px;
     margin: 10px 10px 10px 2px;
+}
+/* Form elements */
+label {
+    margin: 5px;
+    font-weight:bold;
+    font-size: 1.1em;
+}
+
+input {
+    line-height: 1.2em;
+}
+
+input[type="number"], input[type="text"] {
+    min-height: 1.5em;
+    font-size: 1em;
 }
 
 input[type="button"] {
@@ -51,14 +64,17 @@ input[type="button"] {
 select, input[type="text"] {
     padding: 5px;
 }
-
-main {
-    padding: 10px;
-    margin: 10px;
-    max-width: 95%;
+/***********
+Base Info
+***********/
+#baseInfo span {
+    display: block;
+    margin-bottom: 10px;
 }
 
-/* Skills Styles */
+/*************
+Skills Tab
+*************/
 .rollDiv {
     margin-left: 0;
     padding-left: 0;
@@ -86,12 +102,16 @@ main {
     padding-bottom: 10px;
 }
 
-/* Injuries */
+/*************
+Injuries Tab
+*************/
 #injuries-List label {
     min-width:200px;
 }
 
-/* Ability Table */
+/************
+Ability Tab
+************/
 .mini-text {
     display: block;
     font-size: smaller;
@@ -103,7 +123,9 @@ table, td, th {
     padding: 5px;
 }
   
-/* Footer Styles */
+/**************
+Footer Styles
+**************/
 footer p {
     text-align: center;
     padding-bottom: 10px;
