--- a/browser-extension/chrome/styles/dark.css
+++ b/browser-extension/chrome/styles/dark.css
@@ -1,45 +1,53 @@
 /* General Styling */
 html {
     background: black;
-    color: #00ff26
+    color: #13A328
 }
 
 select {
-    border: 1px solid #00ff26;
+    border: 1px solid #13A328;
+}
+
+select:hover, select:focus {
+    border: 3px #13A328 solid;
+}
+
+[type="checkbox"]:hover, [type="checkbox"]:focus {
+    outline: 3px solid #13A328;
 }
 
 input {
-    border: 1px solid #00ff26;
+    border: 1px solid #13A328;
 }
 
 input:hover, input:focus {
-    border: 3px solid #00ff26;
+    border: 3px solid #13A328;
     font-weight: bold;
 }
 
 [type="button"] {
-    background: #056914;
+    background: #13A328;
     color: white;
 }
 
 [type="button"]:hover {
-    border: 3px white solid;
+    border: 3px #13A328 solid;
     background: black;
     color: white;
     font-weight: bold;
 }
 
 /* input[type="text"],input[type="number"] {
-    background: #00ff26;
+    background: #13A328;
     color: black;
 } */
 
 p span {
-    border-bottom: 1px solid #00ff26;
+    border-bottom: 1px solid #13A328;
 }
 
 code {
-    border: 4px solid #00ff26;
+    border: 4px solid #13A328;
 }
 
 /**************
@@ -47,11 +55,11 @@ Skills Styles
 **************/
   
 #skillRollers section {
-    border: double #00ff26 4px;
+    border: double #13A328 4px;
 }
 
 table, td, th {
-    border: 1px solid #00ff26;
+    border: 1px solid #13A328;
 }
 
 /*******************
@@ -62,32 +70,32 @@ Tabpanel Formatting
 }
 
 [role="tabpanel"] {
-    border: 2px solid #00ff26;
-    background: #00ff26;
+    border: 2px solid #13A328;
+    background: #13A328;
 }
 
 [role="tab"]:hover span.focus,
 [role="tab"]:focus span.focus,
 [role="tab"]:active span.focus {
-  border: 2px solid #b7ff00;
+  border: 2px solid #13A328;
 }
 
 [role="tab"][aria-selected="false"] {
-    border-bottom: 1px solid #00ff26;
+    border-bottom: 1px solid #13A328;
 }
 
 [role="tab"][aria-selected="true"] {
-    border-top-color: #b7ff00;
-    border-bottom-color: #00ff26;
-    background: #00ff26;
+    border-top-color: #13A328;
+    border-bottom-color: #13A328;
+    background: #13A328;
 }
 
 [role="tab"],
 [role="tab"]:focus,
 [role="tab"]:hover {
-  border: 1px solid hsl(219deg 1% 72%);
-  border-bottom: 2px solid #00ff26;
-  background: #00ff26;
+  border: 1px solid #13A328;
+  border-bottom: 2px solid #13A328;
+  background: #13A328;
 }
 
 /**************
@@ -106,7 +114,7 @@ Footer Styles
 Tablist darkmode
 ******************/
 [role="tab"][aria-selected="true"] {
-    border-bottom-color: #00ff26;
+    border-bottom-color: #13A328;
     background: black;
 }
 
