--- a/browser-extension/chrome/styles/light.css
+++ b/browser-extension/chrome/styles/light.css
@@ -1,56 +1,68 @@
 /* General Styling */
-body {
+html, #skillRollers section, table {
+    background: #FCF5E5;
+}
+
+html {
     color: #563001;
 }
 
 code {
     border: 4px solid #563001;
+    background: white;
 }
 
 input:hover, input:focus {
     border: 3px solid black;
-    font-weight: bold;
+}
+
+select:hover, select:focus {
+    border: 3px black solid;
+}
+
+[type="checkbox"]:hover, [type="checkbox"]:focus {
+    outline: 3px solid #563001;
 }
 
 p span {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid 563001;
 }
 
 /* Tabpanel Formatting */
 [role="tabpanel"] {
-    border: 2px solid #b7b7b8;
-    background: #fbfcfe;
+    border: 2px solid tan;
+    background: white;
 }
 
 [role="tab"]:hover span.focus,
 [role="tab"]:focus span.focus,
 [role="tab"]:active span.focus {
-  border: 2px solid #2474d6;
+  border: 2px solid #563001;
 }
 
 [role="tab"][aria-selected="false"] {
-    border-bottom: 1px solid #b7b7b8;
+    border-bottom: 1px solid tan;
+    outline: #563001;
 }
 
 [role="tab"][aria-selected="true"] {
-    border-top-color: #2474d6;
-    border-bottom-color: #fbfcfe;
-    background: #fbfcfe;
-    color: #563001;
+    border-top-color: #563001;
+    border-bottom-color: #fcb55f;
+    background: #fcb55f;
 }
 
 [role="tab"],
 [role="tab"]:focus,
 [role="tab"]:hover {
-  border: 1px solid #b7b7b8;
-  border-bottom: 2px solid #b7b7b8;
-  background: #edeff3;
-  color: #563001;
+  border: 1px solid tan;
+  border-bottom: 2px solid tan;
+  background: tan;
 }
 
 /* Skills */
 #skillRollers section {
     border: double #563001 4px;
+
 }
 
 [type="button"] {
@@ -62,6 +74,15 @@ p span {
 
 table, td, th {
     border: 1px solid #563001;
+}
+
+th {
+    background: #563001;
+    color: white;
+}
+
+td {
+    background: white;
 }
   
 /* Footer Styles */
